# PJA-ASI-14c-GR3

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  tortilla_prices.ipynb
conf/base/: catalog.yml  parameters.yml
data/03_models/: trained_autogluon_model.pkl
kedro/: README.md  pyproject.toml
kedro-gr3/: README.md  pyproject.toml
kedro-gr3/conf/base/: parameters.yml
kedro-gr3/src/kedro_gr3/: __main__.py
kedro-gr3/src/kedro_gr3/pipelines/data_processing/: nodes.py  pipeline.py
kedro-gr3/src/kedro_gr3/pipelines/machine_learning/: nodes.py  pipeline.py
kedro/src/kedro/: __init__.py  __main__.py
src/: evaluate_data.py  evaluate_model.py  load_dataset.py  main.py  prepare_data.py  split_data.py
src/PJA-ASI-14c-GR3/: __init__.py  __main__.py  pipeline_registry.py
src/PJA-ASI-14c-GR3/pipelines/auto_ml/: nodes.py  pipeline.py
src/PJA-ASI-14c-GR3/pipelines/data_processing/: nodes.py  pipeline.py
src/PJA-ASI-14c-GR3/pipelines/machine_learning/: nodes.py
src/legacy/: evaluate_data.py  evaluate_model.py  load_dataset.py  machine_learning.py  main.py  prepare_data.py  split_data.py
