[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "PJA-ASI-14c-GR3"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-gr3 = "PJA-ASI-14c-GR3.__main__:main"

[tool.kedro]
package_name = "PJA-ASI-14c-GR3"
project_name = "kedro-gr3"
kedro_init_version = "0.19.5"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "PJA-ASI-14c-GR3.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
